# Infotecs_weather

./: .dockerignore  .gitignore  Dockerfile  docker-compose.local.yml  docker-compose.vps.yml  docker-compose.yml  docker-entrypoint.sh  nginx.conf  openapi.json  pyproject.toml  readme.md  requirements.txt  script.py
.github/workflows/: deploy.yml
app/: main.py
app/api/: api.py  deps.py
app/api/endpoints/: endpoints.py
app/db/: session.py
app/dto/: schemas.py
app/models/: models.py
app/repo/: city_repo.py  user_repo.py
app/services/: weather_service.py
tests/: conftest.py  test_background_updater.py  test_endpoints.py  test_repositories.py  test_weather_service.py
