[project]
name = "Infotecs_weather"
version = "1"
description = "Service for weather tracking"
dependencies = [
    "aiosqlite==0.22.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.1.4",
    "click==8.3.1",
    "fastapi==0.128.5",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "pytest-cov==6.0.0",
    "sqlalchemy==2.0.46",
    "starlette==0.52.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.40.0",
]

[project.urls]
"Homepage" = "https://github.com/KirTrub/Infotecs_weather"
"Repository" = "https://github.com/KirTrub/Infotecs_weather.git"
